tests/snapshots/integration__integration_tests__post_start_commands__post_start_invalid_toml.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Created new branch and worktree for [1mfeature[0m at [REPO].feature

To enable automatic cd, run: wt configure-shell

----- stderr -----
🟡 [33mFailed to load project config from [REPO]/.config/wt.toml[0m
Error: TOML parse error at line 1, column 39
  |
1 | post-start-commands = [invalid syntax
  |                                       ^
unclosed array, expected `]`
 in .config/wt.toml
Skipping post-start commands. Check TOML syntax if file exists.
